Forcefully increase MaxPermSize